# APK_AGI

./: .copilot_fix_find_enforcement_progress.py  .env.example  .gitignore  Dockerfile  LICENSE  README.md  append_script.py  append_script2.py  append_script3.py  append_script_4.py  audit_tools.py  pyproject.toml
scripts/: setup_tools.py
src/apk_agent/: __init__.py  cli.py  compactor.py  config.py  parallelism.py  patch_engine.py  progress.py  reporting.py  session.py  telegram_bot.py  ui.py  workspace.py
src/apk_agent/agent/: execution_context.py  graph.py  orchestrator.py  prompts.py  state.py  sub_agents.py  tools_def.py
src/apk_agent/llm/: __init__.py  provider.py
src/apk_agent/tools/: __init__.py  aapt2.py  advanced_search.py  api_response_patcher.py  apk_patcher.py  apktool.py  app_knowledge.py  auto_bypass.py  base.py  behavior_engine.py  binary_patch.py  cert_analyzer.py  cloud_scanner.py  code_graph.py  code_injector.py  component_analyzer.py  dart_aot.py  data_flow.py  deep_analysis.py  deep_analyzer.py  dex2jar.py  dex_engine.py  evidence.py  file_ops.py  guard_surface_profiler.py  index_cache.py  jadx.py  manifest_analyzer.py  manifest_parser.py  native_analyzer.py  native_re_core.py  network_config.py  orchestration_router.py  package_renamer.py  patch_strategy.py  resource_tools.py  runtime_menu.py  runtime_override.py  semantic_architecture.py  semantic_cache.py  (+12 more)
src/apk_agent/tools/semantic_core/: __init__.py  cycles.py  identity.py  invariants.py  rules.py  schema.py  serialization.py
