[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apk-agent"
version = "2.0.0"
description = "AI-Powered Interactive Android APK Reverse-Engineering Agent with Sub-Agents & Parallel Execution"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "networkx>=3.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
apk-agent = "apk_agent.cli:main"
apk-agent-telegram = "apk_agent.telegram_bot:main"

[tool.setuptools.packages.find]
where = ["src"]
